сделал чтобы бэк работал с андроид студио и подключил атлас

--- a/lib/server/.env
+++ b/lib/server/.env
@@ -1,5 +1,5 @@
 PORT=3001
-MONGO_URL=mongodb://localhost:27017/aplus
+MONGO_URL=mongodb+srv://aplus:Archer010@arlan.dijuqke.mongodb.net/?appName=Arlan/aplus
 
 EMAIL_USER=zangazyarlan369@gmail.com
 EMAIL_PASS=hcdt vgmv rxbj wdnx
